# UnderstandingPythonEcosystem

./: .gitmodules  README.md  Resources.md  UnderstandingPythonPandasSourceCode.docx
docs/ApacheArrow/: ApacheArrowIntro.md
docs/PEPs/: PEP234_Iterators.md  PEP255_SimpleGenerators.md  PEP3107_FunctionAnnotations.md  PEP333_PythonWebServerGatewayInterfacev1.0.md  PEP362_FunctionSignatureObject.md  PEP371_MultiprocessingPackage.md  PEP380_SyntaxForDelegatingToSubgenerator.md  PEP482_LiteratureOverviewForTypeHints.md  PEP483_TheTheoryOfTypeHints.md  PEP484_TypeHints.md  PEP489_MultiPhaseExtModuleInitialization.md  PEP526_SyntaxForVariableAnnotations.md
docs/PythonBasics/: ControlFlow.md
docs/PythonInternals/ExtendingPython/: ExtendingPythonWithCCorCPP.md  ReleasingTheGIL.md
docs/numpy/: ArrayCreation.md
docs/pandas/: IndexingAndSelectingData.md
illustration_code/coroutines/: coro_hello_world.py  coro_hello_world2.py  coro_hello_world3.py  coro_hello_world4.py  coro_nested.py  run_in_executor.py
illustration_code/coroutines_and_tasks/: coro_hello_world2.py  coro_hello_world3.py  coro_hello_world4.py  run_nested.sh
illustration_code/event_loop/: event_loop_call_later_display_date.py  event_loop_fd_read_events.py  event_loop_hello_world.py
illustration_code/multiprocessing/: mp_pool_map.py  mp_process_hello.py
samples/flatbuffer-samples/: CMakeLists.txt
samples/pandas-samples/: pyproject.toml
samples/pandas-samples/pandas_samples/: .unpivot.py.swp  multiindex_init.py  unpivot.py
samples/pandas-samples/tests/: test_pandas_samples.py
(+12 files in other folders)
