[tool.poetry]
name = "pandas-samples"
version = "0.1.0"
description = ""
authors = ["dimitarpg13 <dimitar_pg13@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
